external/lmgc90_dev-fortran_lib/src/ChiPy/mailx/wrap_therMAILx.h

 
  extern "C" int therMAILx_GetNbTherMAILx(void);
  extern "C" int therMAILx_GetNbNodes(int ivalue);
  extern "C" int therMAILx_GetNbElements(int ivalue);
  extern "C" int therMAILx_GetNbDofs(int);
  extern "C" void therMAILx_UpdateThermBulk(int * ivector_in=nullptr, int ilength_in=0);
  extern "C" double therMAILx_ComputeResidueNorm(int * ivector_in=nullptr, int ilength_in=0);
  extern "C" void therMAILx_ReadDrivenDof(void);
  extern "C" void therMAILx_WriteDrivenDof(void);
  extern "C" void therMAILx_LoadModels(void);
  extern "C" void therMAILx_LoadBehaviours(void);
  extern "C" void therMAILx_ReadIniDof(int num=0);
  extern "C" void therMAILx_ReadIniGPV(int num=0);
  extern "C" void therMAILx_WriteLastDof(void);
  extern "C" void therMAILx_WriteOutDof(void);
  extern "C" void therMAILx_DisplayOutDof(void);
  extern "C" void therMAILx_PutBodyVector(char * cvalue1_c, int ivalue1, double * matrix_in, int dim1, int dim2);
  extern "C" void therMAILx_GetBodyVector(char * cvalue1_c, int ivalue1, double** matrix_out, int* dim1, int* dim2);
  extern "C" int therMAILx_GetScalarFieldRank(int ibdyty, int blmty, char* name);
  extern "C" void therMAILx_SetScalarFieldByNode(int IdBody, int f_rank, double * rvector_in, int rlength_in);
  extern "C" void therMAILx_SetScalarFieldByElement(int IdBody, int f_rank, double * rvector_in, int rlength_in);
  extern "C" int therMAILx_GetVectorFieldRank(int ibdyty, int blmty, char* name);
  extern "C" void therMAILx_SetVectorFieldByNode(int ibdyty, int f_rank, double * matrix_in, int dim1, int dim2);
  extern "C" void therMAILx_SetVectorFieldByElement(int ibdyty, int f_rank, double * matrix_in, int dim1, int dim2);
  extern "C" void therMAILx_AddSource(int ivalue1, int ivalue2);
  extern "C" void therMAILx_AddNodalFieldDivergence(int ivalue1, int ivalue2);
  extern "C" void therMAILx_PushProperties(void);