src/lmgc90_dev/src/ChiPy/mailx/wrap_therMAILx.f90


      type(c_ptr),    intent(in), value :: list_ids
      integer(c_int), intent(in), value :: length
      !
      integer(kind=4), save :: timer_id = 0
      integer(kind=4) :: i
      integer(kind=4), dimension(:), pointer :: list

      if( get_nb_therMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[therM] comp field  ')
      call start_itimer(timer_id)

      if( length == 0 ) then
        do i = 1, get_nb_therMAILx()
          CALL compute_conductivity_therMAILx(i,1)
        end do
      else
        call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
        do i = 1, length
          CALL compute_conductivity_therMAILx(list(i),1)
        end do
      end if

      call stop_itimer(timer_id)

    end subroutine

    subroutine UpdateThermBulk(list_ids, length) bind(c, name='therMAILx_UpdateThermBulk')
      use timer
      implicit none

      type(c_ptr),    intent(in), value :: list_ids
      integer(c_int), intent(in), value :: length
      !
      integer(kind=4), save :: timer_id = 0
      integer(kind=4) :: i
      integer(kind=4), dimension(:), pointer :: list

      if( get_nb_therMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[therM] update bulk ')
      call start_itimer(timer_id)

      if( length == 0 ) then
        do i = 1, get_nb_therMAILx()
          CALL update_bulk_therMAILx(i)
        end do
      else
        call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
        do i = 1, length
          call update_bulk_therMAILx(list(i))
        end do
      end if

      call stop_itimer(timer_id)

    end subroutine

    function ComputeResidueNorm(list_ids, length) bind(c, name='therMAILx_ComputeResidueNorm')
      use timer
      implicit none

      type(c_ptr),    intent(in), value :: list_ids
      integer(c_int), intent(in), value :: length
      !
      real(C_double) :: ComputeResidueNorm
      !
      integer(kind=4), save :: timer_id = 0
      integer(kind=4) :: i
      integer(kind=4), dimension(:), pointer :: list

      real(C_double) :: norm_res,norm_T

      ComputeResidueNorm = 0.d0

      if( get_nb_therMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[therM] compResNorm ')
      call start_itimer(timer_id)

      if( length == 0 ) then
        do i = 1, get_nb_therMAILx()
          CALL compute_residue_norm_therMAILx(norm_res,norm_T,i) 
          ComputeResidueNorm = max(ComputeResidueNorm,norm_res)
        end do
      else
        call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
        do i = 1, length
          CALL compute_residue_norm_therMAILx(norm_res,norm_T,list(i)) 
          ComputeResidueNorm = max(ComputeResidueNorm,norm_res)
        end do
      end if

      call stop_itimer(timer_id)

    end function

!!!--------------------------------------------------------------------

    SUBROUTINE ReadDrivenDof() bind(c, name='therMAILx_ReadDrivenDof')
      IMPLICIT NONE

       CALL read_in_driven_dof_therMAILx

    END SUBROUTINE

    SUBROUTINE WriteDrivenDof() bind(c, name='therMAILx_WriteDrivenDof')
      IMPLICIT NONE

       CALL write_out_driven_dof_therMAILx

    END SUBROUTINE

    SUBROUTINE LoadModels() bind(c, name='therMAILx_LoadModels')
      IMPLICIT NONE

       CALL read_models_therMAILx

    END SUBROUTINE

    SUBROUTINE LoadBehaviours() bind(c, name='therMAILx_LoadBehaviours')

       CALL read_behaviours_therMAILx 

    END SUBROUTINE

    subroutine ReadIniDof(step) bind(c, name='therMAILx_ReadIniDof')
       implicit none
       integer(c_int), intent(in), value :: step

       call read_in_dof_therMAILx(step)

    end subroutine

    subroutine ReadIniGPV(step) bind(c, name='therMAILx_ReadIniGPV')
       implicit none
       integer(c_int), intent(in), value :: step

       call read_in_gpv_therMAILx(step)

    end subroutine

!!!--------------------------------------------------------------------

    SUBROUTINE WriteLastDof() bind(c, name='therMAILx_WriteLastDof')
      IMPLICIT NONE
      INTEGER :: ifrom,ito

      ifrom = 1  
      ito   = get_nb_therMAILx()
      CALL write_xxx_dof_therMAILx(2,ifrom,ito)

    END SUBROUTINE

    SUBROUTINE WriteOutDof() bind(c, name='therMAILx_WriteOutDof')
      IMPLICIT NONE
      INTEGER :: ifrom,ito
      LOGICAL :: write_DOF

      !! PURPOSE
      !!  write ascii DOF.OUT file. Can be activate only each N step

      write_DOF = get_write_DOF_therMAILx()
      IF (write_DOF) THEN
        ifrom = 1  
        ito   = get_nb_therMAILx()
        CALL write_xxx_dof_therMAILx(1,ifrom,ito)
      END IF

    END SUBROUTINE

    SUBROUTINE DisplayOutDof() bind(c, name='therMAILx_DisplayOutDof')
      IMPLICIT NONE
      INTEGER :: ifrom,ito

      !! PURPOSE
      !!  display body degrees of freedom
       
      ifrom = 1  
      ito   = get_nb_therMAILx()
      CALL write_xxx_dof_therMAILx(6,ifrom,ito)

    END SUBROUTINE

    subroutine PutBodyVector(cvalue1_c, ivalue1, mat_in, dim1, dim2) bind(c, name='therMAILx_PutBodyVector')
      implicit none
      character(c_char), intent(in), dimension(5) :: cvalue1_c
      integer(c_int)   , intent(in), value        :: ivalue1, dim1, dim2
      type(c_ptr)                  , value        :: mat_in
      !
      real(kind=8), dimension(:), pointer :: vector
      character(len=5) :: cvalue1
      integer :: i

      cvalue1 = ''
      do i=1,5
        cvalue1 = cvalue1(1:i-1) // cvalue1_c(i)
      end do

      call c_f_pointer(cptr=mat_in, fptr=vector, shape=(/dim1*dim2/))
      call put_vector_therMAILx(cvalue1, ivalue1, vector, dim1*dim2)

    end subroutine

    SUBROUTINE GetBodyVector(cvalue1_c,ivalue1,rvect,ivalue2,ivalue3) bind(c, name='therMAILx_GetBodyVector')
      use overall, only: nbDIME
      IMPLICIT NONE
      character(c_char),dimension(5),intent(in) :: cvalue1_c
      integer(c_int), intent(in), value         :: ivalue1
      integer(c_int)                            :: ivalue2, ivalue3
      type(c_ptr)                               :: rvect
      !
      real(kind=8), dimension(:,:), pointer :: vector
      character(len=5) :: cvalue1
      integer :: i
      
      cvalue1 = ''
      do i=1,5
        cvalue1 = cvalue1(1:i-1) // cvalue1_c(i)
      end do

      if( cvalue1 == 'Coor0' ) then
        ivalue2 = nbDIME
      else
        ivalue2 = 1
      end if

      ivalue3 = get_nb_nodes_therMAILx(ivalue1)
      allocate(vector(ivalue2,ivalue3))
      CALL get_vector_therMAILx(cvalue1,ivalue1,vector,ivalue2*ivalue3)

      rvect = c_loc(vector(1,1))

    END SUBROUTINE

    function GetNbTherMAILx() bind(c, name='therMAILx_GetNbTherMAILx')

       implicit none

       ! valeur de retour
       integer(c_int) :: GetNbTherMAILx ! nombre mailles pour la thermique

       GetNbTherMAILx = get_nb_therMAILx()

    end function GetNbTherMAILx
    
    function getScalarFieldRank(ibdyty, iblmty, name) bind(c, name='therMAILx_GetScalarFieldRank')
      implicit none
      integer(c_int), intent(in), value :: ibdyty
      integer(c_int), intent(in), value :: iblmty
      character(c_char), dimension(*)   :: name
      integer(c_int) :: getScalarFieldRank
      !
      integer(kind=4)   :: i
      character(len=30) :: f_name

      f_name = ''
      i = 1
      do while( name(i) /= c_null_char .and. i <= 30 )
        f_name = f_name(1:i-1) // name(i)
        i = i+1
      end do

      getScalarFieldRank = get_field_rank(ibdyty, iblmty, f_name)

    end function

    subroutine SetScalarFieldByNode(ibdyty,f_rank,f,f_size) bind(c, name='therMAILx_SetScalarFieldByNode')
      implicit none
      integer(c_int), intent(in), value :: ibdyty,f_rank,f_size
      real(c_double), intent(in), dimension(f_size) :: f

       call set_field_bynode(ibdyty,f_rank,f_size,f)

    end subroutine

    subroutine SetScalarFieldByElem(ibdyty,f_rank,f,f_size) bind(c, name='therMAILx_SetScalarFieldByElement')
      implicit none
      integer(c_int), intent(in), value :: ibdyty, f_rank, f_size
      real(c_double), intent(in), dimension(f_size) :: f

      call set_field_byelem(ibdyty,f_rank,f_size,f)

    end subroutine

    function getVectorFieldRank(ibdyty, iblmty, name) bind(c, name='therMAILx_GetVectorFieldRank')
      implicit none
      integer(c_int), intent(in), value :: ibdyty
      integer(c_int), intent(in), value :: iblmty
      character(c_char), dimension(*)   :: name
      integer(c_int) :: getVectorFieldRank
      !
      integer(kind=4)   :: i
      character(len=30) :: f_name

      f_name = ''
      i = 1
      do while( name(i) /= c_null_char .and. i <= 30 )
        f_name = f_name(1:i-1) // name(i)
        i = i+1
      end do

      getVectorFieldRank = get_vfield_rank(ibdyty, iblmty, f_name)

    end function

    subroutine SetVectorFieldByNode(ibdyty,f_rank,f,f_size1,f_size2) bind(c, name='therMAILx_SetVectorFieldByNode')
      implicit none
      integer(c_int), intent(in), value :: ibdyty,f_rank,f_size1,f_size2
      real(c_double), intent(in), dimension(f_size2,f_size1) :: f

      call set_vfield_bynode(ibdyty,f_rank,f,f_size2,f_size1)

    end subroutine

    subroutine SetVectorFieldByElem(ibdyty,f_rank,f,f_size1,f_size2) bind(c, name='therMAILx_SetVectorFieldByElement')
      implicit none
      integer(c_int), intent(in), value :: ibdyty,f_rank,f_size1,f_size2
      real(c_double), intent(in), dimension(f_size2,f_size1) :: f

      call set_vfield_byelem(ibdyty,f_rank,f,f_size2,f_size1)

    end subroutine

    !fd: fonction qui renvoie le nombre de noeuds d'un therMAILx
    function GetNbNodes(ibdyty) bind(c, name='therMAILx_GetNbNodes')

       implicit none
       integer(c_int),value :: ibdyty
       ! valeur de retour
       integer(c_int) :: GetNbNodes ! nombre de noeuds d un therMAILx 

       GetNbNodes = get_nb_nodes_therMAILx(ibdyty)

    end function GetNbNodes


    !fd: fonction qui renvoie le nombre de noeuds d'un therMAILx
    function GetNbElements(ibdyty) bind(c, name='therMAILx_GetNbElements')

       implicit none
       integer(c_int),value :: ibdyty
       ! valeur de retour
       integer(c_int) :: GetNbElements ! nombre de noeuds d un therMAILx 

       GetNbElements = get_nb_elements_therMAILx(ibdyty)

    end function GetNbElements

    !fd: fonction qui renvoie le nombre de ddl d'un therMAILx
    function GetNbDofs(ibdyty) bind(c, name='therMAILx_GetNbDofs')

       implicit none
       integer(c_int),value :: ibdyty
       ! valeur de retour
       integer(c_int) :: GetNbDofs ! nombre de ddl d un therMAILx 

       GetNbDofs = 1*get_nb_nodes_therMAILx(ibdyty)

    end function GetNbDofs
    
    !--------------------------------------------------------------------------------
    ! DA : Ajout du wrap pour source locale
    SUBROUTINE AddSource(ivalue1, ivalue2) bind(c, name='therMAILx_AddSource')
      IMPLICIT NONE
      integer(c_int),intent(in), value           :: ivalue1, ivalue2

      CALL add_source_therMAILx(ivalue1, ivalue2)


    END SUBROUTINE

    SUBROUTINE AddFieldDivergence(ivalue1, ivalue2) bind(c, name='therMAILx_AddNodalFieldDivergence')
      IMPLICIT NONE
      integer(c_int),intent(in), value           :: ivalue1, ivalue2

      CALL add_field_divergence_therMAILx(ivalue1, ivalue2)


    END SUBROUTINE
    !--------------------------------------------------------------------------------
    !DA : Ajout du wrap pour utiliser ppset dans thermailx
    SUBROUTINE PushProperties() bind(c, name='therMAILx_PushProperties')
      IMPLICIT NONE

       CALL push_ppset_therMAILx
